fix(): ha habido un fallo en el ejercicio 39